# autougc

./: .env.example  .gitignore  OBSERVABILITY.md  PROMPT_NOTES.md  README.md  SETUP.md  package.json  phase1_plan.md  pyproject.toml  requirements-api.txt  requirements.txt  start-dev.sh  stop-dev.sh  test_sora.py  ugc_pipeline_plan.md  ugc_pipeline_prd.md  watch-logs.sh
.github/workflows/: auto-pr.yml
api/: __init__.py  job_manager.py  server.py  video_downloader.py
api/routes/: __init__.py  analyze.py  mechanics.py  pipeline.py
assets/interaction_library/: index.json
scripts/: check_result.py  prompt_experiments.py  run_test.sh  test_api.py  test_image_to_video.py  test_kling.py  test_kling_v2.py  test_langsmith.py  test_pipeline.py  test_sora_fal.py  test_sora_pro.py
src/: __init__.py  cli.py  tracing.py
src/analyzer/: __init__.py  audio_extractor.py  blueprint_generator.py  frame_extractor.py  pacing_analyzer.py  product_tracker.py  scene_segmenter.py  structure_parser.py  transcriber.py  visual_analyzer.py
src/generator/: __init__.py
src/mechanics/: __init__.py  composer.py  engine.py  mapper.py  models.py  templates.py
src/models/: __init__.py  blueprint.py
src/pipeline/: __init__.py  product_loader.py  state.py  types.py
src/pipeline/graphs/: __init__.py  analysis_graph.py  full_pipeline.py  prompt_graph.py  simple_pipeline.py
src/pipeline/nodes/: __init__.py  analyze_product.py  analyze_video.py  analyze_visuals.py  classify_ugc_intent.py  download_video.py  (+12 more)
tests/: __init__.py
web/: README.md  env.example  package-lock.json  package.json
(+25 files in other folders)
