[project]
name = "autougc"
version = "0.1.0"
description = "TikTok/Reel Analyzer and UGC Ad Generator"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "AutoUGC Team" }]

dependencies = [
    "pydantic>=2.0",
    "anthropic>=0.45.0",
    "openai>=1.0.0",
    "openai-whisper>=20231117",
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",
    "click>=8.0.0",
    "fastapi>=0.128.2",
    "uvicorn>=0.40.0",
    "langgraph>=1.0.7",
    "pillow>=12.1.0",
    "httpx>=0.28.1",
    "yt-dlp>=2026.2.4",
    "fal-client>=0.13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.scripts]
autougc = "src.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
